crates/nash-config/src/snapshots/nash_config__parse__build_tests__build_roundtrip-16.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"application\",\"plutusVersion\":\"v3\",\"traceLevel\":\"compact\",\"compilerTraces\":true}"
---
{
  "type": "application",
  "plutusVersion": "v3",
  "traceLevel": "compact",
  "compilerTraces": true,
  "sourceDirectories": [
    "src"
  ],
  "dependencies": {},
  "testDependencies": {}
}
