crates/nash-config/src/snapshots/nash_config__parse__build_tests__build_roundtrip-2.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"application\",\"traceLevel\":\"silent\",\"compilerTraces\":true}"
---
{
  "type": "application",
  "traceLevel": "silent",
  "compilerTraces": true,
  "sourceDirectories": [
    "src"
  ],
  "dependencies": {},
  "testDependencies": {}
}
