crates/nash-config/src/snapshots/nash_config__parse__build_tests__build_roundtrip-4.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"application\",\"traceLevel\":\"compact\",\"compilerTraces\":true}"
---
{
  "type": "application",
  "traceLevel": "compact",
  "compilerTraces": true,
  "sourceDirectories": [
    "src"
  ],
  "dependencies": {},
  "testDependencies": {}
}
